// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EMBLDropdown /> should render as invisible 1`] = `
<div
  aria-hidden={true}
  className="masthead-black-bar"
  inert="true"
>
  <div
    className="dropdown-pane bottom embl-dropdown"
    id="embl-dropdown"
  >
    <p>
      EMBL-EBI in Hinxton is one of six EMBL locations across Europe.
      <br />
      <Connect(Link)
        className="small readmore"
        href="https://www.ebi.ac.uk/about"
      >
        More about EMBL-EBI
      </Connect(Link)>
    </p>
    <h6>
      Connect to another EMBL location
    </h6>
    <div
      className="row small-collapse clearfix padding-bottom-large"
    >
      <div
        className="columns small-5 padding-bottom-medium"
      >
        <Connect(Link)
          href="https://www.embl.de/"
        >
          Heidelberg
        </Connect(Link)>
        <div
          className="small"
        >
          Main Laboratory
        </div>
      </div>
      <div
        className="columns small-7 padding-bottom-medium"
      >
        <Connect(Link)
          href="http://www.embl-barcelona.es/"
        >
          Barcelona
        </Connect(Link)>
        <div
          className="small"
        >
          Tissue biology and disease modelling
        </div>
      </div>
      <div
        className="columns small-5 padding-bottom-medium"
      >
        <Connect(Link)
          href="https://www.embl.fr/"
        >
          Grenoble
        </Connect(Link)>
        <div
          className="small"
        >
          Structural Biology
        </div>
      </div>
      <div
        className="columns small-7 padding-bottom-medium"
      >
        <Connect(Link)
          href="https://www.embl-hamburg.de/"
        >
          Hamburg
        </Connect(Link)>
        <div
          className="small"
        >
          Structural Biology
        </div>
      </div>
      <div
        className="columns small-5 padding-bottom-medium"
      >
        <Connect(Link)
          href="https://www.embl.it/"
        >
          Rome
        </Connect(Link)>
        <div
          className="small"
        >
          Epigenetics and neurology
        </div>
      </div>
      <div
        className="columns small-7 padding-bottom-medium"
      >
        <Connect(Link)
          className="readmore"
          href="https://embl.org/"
        >
          More about EMBL
        </Connect(Link)>
      </div>
    </div>
  </div>
</div>
`;

exports[`<EMBLDropdown /> should render as visible 1`] = `
<div
  aria-hidden={false}
  className="masthead-black-bar visible"
  inert="false"
>
  <div
    className="dropdown-pane bottom embl-dropdown"
    id="embl-dropdown"
  >
    <p>
      EMBL-EBI in Hinxton is one of six EMBL locations across Europe.
      <br />
      <Connect(Link)
        className="small readmore"
        href="https://www.ebi.ac.uk/about"
      >
        More about EMBL-EBI
      </Connect(Link)>
    </p>
    <h6>
      Connect to another EMBL location
    </h6>
    <div
      className="row small-collapse clearfix padding-bottom-large"
    >
      <div
        className="columns small-5 padding-bottom-medium"
      >
        <Connect(Link)
          href="https://www.embl.de/"
        >
          Heidelberg
        </Connect(Link)>
        <div
          className="small"
        >
          Main Laboratory
        </div>
      </div>
      <div
        className="columns small-7 padding-bottom-medium"
      >
        <Connect(Link)
          href="http://www.embl-barcelona.es/"
        >
          Barcelona
        </Connect(Link)>
        <div
          className="small"
        >
          Tissue biology and disease modelling
        </div>
      </div>
      <div
        className="columns small-5 padding-bottom-medium"
      >
        <Connect(Link)
          href="https://www.embl.fr/"
        >
          Grenoble
        </Connect(Link)>
        <div
          className="small"
        >
          Structural Biology
        </div>
      </div>
      <div
        className="columns small-7 padding-bottom-medium"
      >
        <Connect(Link)
          href="https://www.embl-hamburg.de/"
        >
          Hamburg
        </Connect(Link)>
        <div
          className="small"
        >
          Structural Biology
        </div>
      </div>
      <div
        className="columns small-5 padding-bottom-medium"
      >
        <Connect(Link)
          href="https://www.embl.it/"
        >
          Rome
        </Connect(Link)>
        <div
          className="small"
        >
          Epigenetics and neurology
        </div>
      </div>
      <div
        className="columns small-7 padding-bottom-medium"
      >
        <Connect(Link)
          className="readmore"
          href="https://embl.org/"
        >
          More about EMBL
        </Connect(Link)>
      </div>
    </div>
  </div>
</div>
`;
